[app] Update home design (#1080)

--- a/app/src/main/res/layout/activity_crash_report.xml
+++ b/app/src/main/res/layout/activity_crash_report.xml
@@ -51,7 +51,7 @@
                     android:layout_height="128dp"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="8dp"
-                    app:srcCompat="@drawable/ic_warning"
+                    app:srcCompat="@drawable/ic_round_warning_24"
                     tools:ignore="ContentDescription" />
 
                 <TextView
