--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -31,4 +31,66 @@
         <item>MODE_NIGHT_YES</item>
         <item>MODE_NIGHT_FOLLOW_SYSTEM</item>
     </string-array>
+
+    <string-array name="language" translatable="false">
+        <item>@string/follow_system</item>
+        <item>af-ZA</item>
+        <item>ar-SA</item>
+        <item>ca-ES</item>
+        <item>cs-CZ</item>
+        <item>da-DK</item>
+        <item>el-GR</item>
+        <item>es-ES</item>
+        <item>fi-FI</item>
+        <item>fr-FR</item>
+        <item>hu-HU</item>
+        <item>it-IT</item>
+        <item>iw-IL</item>
+        <item>ja-JP</item>
+        <item>ko-KR</item>
+        <item>nl-NL</item>
+        <item>no-NO</item>
+        <item>pl-PL</item>
+        <item>pt-BR</item>
+        <item>pt-PT</item>
+        <item>ro-RO</item>
+        <item>ru-RU</item>
+        <item>tr-TR</item>
+        <item>uk-UA</item>
+        <item>vi-VN</item>
+        <item>zh-CN</item>
+        <item>zh-HK</item>
+        <item>zh-TW</item>
+    </string-array>
+
+    <string-array name="language_value" translatable="false">
+        <item>SYSTEM</item>
+        <item>af-ZA</item>
+        <item>ar-SA</item>
+        <item>ca-ES</item>
+        <item>cs-CZ</item>
+        <item>da-DK</item>
+        <item>el-GR</item>
+        <item>es-ES</item>
+        <item>fi-FI</item>
+        <item>fr-FR</item>
+        <item>hu-HU</item>
+        <item>it-IT</item>
+        <item>iw-IL</item>
+        <item>ja-JP</item>
+        <item>ko-KR</item>
+        <item>nl-NL</item>
+        <item>no-NO</item>
+        <item>pl-PL</item>
+        <item>pt-BR</item>
+        <item>pt-PT</item>
+        <item>ro-RO</item>
+        <item>ru-RU</item>
+        <item>tr-TR</item>
+        <item>uk-UA</item>
+        <item>vi-VN</item>
+        <item>zh-CN</item>
+        <item>zh-HK</item>
+        <item>zh-TW</item>
+    </string-array>
 </resources>
