[app] Hide unavailable settings on lower versions of Android (#1098)

--- a/app/src/main/res/xml-v29/prefs.xml
+++ b/app/src/main/res/xml-v29/prefs.xml
@@ -14,7 +14,6 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
@@ -105,5 +104,17 @@
         <Preference
             android:key="restore"
             android:title="@string/settings_restore" />
+    </com.takisoft.preferencex.PreferenceCategory>
+
+    <com.takisoft.preferencex.PreferenceCategory
+        android:key="settings_group_system"
+        android:title="@string/settings_group_system">
+        <SwitchPreference
+            android:defaultValue="true"
+            android:enabled="false"
+            android:key="show_hidden_icon_apps_enabled"
+            android:persistent="false"
+            android:summary="@string/settings_show_hidden_icon_apps_enabled_summary"
+            android:title="@string/settings_show_hidden_icon_apps_enabled" />
     </com.takisoft.preferencex.PreferenceCategory>
 </PreferenceScreen>
