[app] Add English to the language selector (#1109)

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -40,6 +40,7 @@
         <item>cs</item>
         <item>da</item>
         <item>el</item>
+        <item>en</item>
         <item>es</item>
         <item>fi</item>
         <item>fr</item>
@@ -71,6 +72,7 @@
         <item>cs</item>
         <item>da</item>
         <item>el</item>
+        <item>en</item>
         <item>es</item>
         <item>fi</item>
         <item>fr</item>
