[app] Harmonize card color (#1213)
* [app] Harmonize card color

* [app] Fix recyclerview paddings

* [app] Fix styles

* [app] Use MaterialAlertDialog

* [app] Fix icon button style

* [app] Update appbar to MD3 style

* [app] Use new DynamicColors

* [app] Fix color picker style

--- a/app/src/main/res/layout/fragment_logs.xml
+++ b/app/src/main/res/layout/fragment_logs.xml
@@ -27,9 +27,8 @@
     app:edgeToEdge="true"
     app:fitsSystemWindowsInsets="start|end">
 
-    <rikka.material.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
-        style="?appBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
@@ -39,14 +38,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                app:subtitleTextAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle"
-                app:titleTextAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
-                app:popupTheme="?actionBarPopupTheme" />
+                android:elevation="0dp" />
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/sliding_tabs"
@@ -66,7 +63,7 @@
                     android:text="@string/nav_item_logs_lsp" />
             </com.google.android.material.tabs.TabLayout>
         </LinearLayout>
-    </rikka.material.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -81,7 +78,6 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:fadeScrollbars="true"
-            android:paddingTop="104dp"
             android:scrollbarStyle="insideOverlay"
             android:scrollbars="vertical"
             app:borderTopVisibility="whenTop"
