--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -27,9 +27,8 @@
     app:edgeToEdge="true"
     app:fitsSystemWindowsInsets="start|end">
 
-    <rikka.material.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
-        style="?appBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
@@ -39,14 +38,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                app:popupTheme="?actionBarPopupTheme"
-                app:subtitleTextAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle"
-                app:titleTextAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title" />
+                android:elevation="0dp" />
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
@@ -57,7 +54,7 @@
                 app:tabIndicatorAnimationMode="elastic"
                 app:tabMode="scrollable" />
         </LinearLayout>
-    </rikka.material.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
