--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,12 +32,6 @@
         <item name="colorNormal">@color/material_green_500</item>
         <item name="colorInstall">@color/material_blue_500</item>
 
-        <item name="actionBarStyle">@style/Widget.Material.ActionBar.Surface</item>
-        <item name="actionBarTheme">@style/ThemeOverlay.ActionBar</item>
-        <item name="toolbarStyle">@style/Widget.Material.Toolbar</item>
-
-        <item name="appBarStyle">@style/Widget.AppBar.Surface.Raisable</item>
-
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -60,12 +54,6 @@
         <item name="colorNormal">@color/material_green_200</item>
         <item name="colorInstall">@color/material_blue_200</item>
 
-        <item name="actionBarStyle">@style/Widget.Material.ActionBar.Surface</item>
-        <item name="actionBarTheme">@style/ThemeOverlay.ActionBar</item>
-        <item name="toolbarStyle">@style/Widget.Material.Toolbar</item>
-
-        <item name="appBarStyle">@style/Widget.AppBar.Surface.Raisable</item>
-
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -76,45 +64,6 @@
     </style>
 
     <style name="Theme" parent="Base.AppTheme" />
-
-    <style name="Widget.AppBar" parent="">
-        <item name="android:background">?toolbarColor</item>
-        <item name="android:theme">?actionBarTheme</item>
-        <item name="android:stateListAnimator">@animator/raise_animator</item>
-        <item name="android:elevation">2dp</item>
-    </style>
-
-    <style name="Widget.Material.Toolbar" parent="Widget.MaterialComponents.Toolbar">
-        <item name="android:background">?android:colorBackground</item>
-    </style>
-
-    <style name="Widget.AppBar.Surface">
-        <item name="android:background">?android:colorBackground</item>
-        <item name="android:stateListAnimator">@animator/alpha_animator</item>
-        <item name="android:elevation">@dimen/app_bar_elevation</item>
-    </style>
-
-    <style name="Widget.AppBar.Surface.Raisable">
-        <item name="android:elevation">0dp</item>
-        <item name="android:stateListAnimator">@animator/raise_animator</item>
-    </style>
-
-    <style name="ThemeOverlay.ActionBar" parent="ThemeOverlay.MaterialComponents.ActionBar">
-        <item name="elevation">0dp</item>
-        <item name="titleTextAppearance">
-            @android:style/TextAppearance.Material.Widget.Toolbar.Title
-        </item>
-        <item name="subtitleTextAppearance">
-            @android:style/TextAppearance.Material.Widget.Toolbar.Subtitle
-        </item>
-    </style>
-
-    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="iconPadding">0dp</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:paddingRight">12dp</item>
-        <item name="android:minWidth">48dp</item>
-    </style>
 
     <style name="DeviceInfoDialogLabel">
         <item name="android:textAlignment">viewStart</item>
@@ -157,6 +106,13 @@
         <item name="android:background">@drawable/item_background_round_nopadding</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:padding">16dp</item>
+    </style>
+
+    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="iconPadding">0dp</item>
+        <item name="android:paddingLeft">@dimen/mtrl_btn_icon_btn_padding_left</item>
+        <item name="android:paddingRight">@dimen/mtrl_btn_icon_btn_padding_left</item>
+        <item name="android:minWidth">36dp</item>
     </style>
 
 </resources>
